# minesweeper-web

./: Cargo.toml  README.md
src/: main.rs
static/: index.html
