[package]
name = "minesweeper-web"
version = "0.1.0"
edition = "2021"

[dependencies]
minesweeper = { path = "../minesweeper" }
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
